# ReadingAndGetStarsTGBot

./: .gitignore  Dockerfile  README.md  app.py  documentation_ru.md  main.py  pyproject.toml
api/: deps.py  server.py
api/routers/: __init__.py  health.py  reading.py  register-user.py  user.py  users.py
bot/handlers/: start.py  withdrawal.py
bot/handlers/admin/: admin_general_stats.py  admin_menu.py  delete_redis_keys.py  requests.py  users.py
bot/handlers/ui/: ui_cards.py  (+1 more)
bot/middleware/: access.py  activity.py  admin_check.py  command_block.py  user_check.py
config/: settings.py
core/: config.py  constants.py  content_config.py
core/ai/: llm_image_content_generator.py  llm_providers.py  llm_text_content_generator.py
core/application/: startup.py
core/database/: card_ops.py  init_db.py  models.py  text_log.py  themes.py  user_ops.py
core/decorators/: admin_only.py  approved_user_only.py  block.py  handle_image_errors.py  handle_text_generation.py
core/infrastructure/: image_tools.py
core/middleware/: access.py  activity.py  admin_check.py  approve_check.py  command_block.py  load_user.py  user_check.py
core/models/: admin_general_stats.py  pagination.py  reading_state.py  user_stat.py  user_state.py
core/presentation/: deps.py
core/utils/: guards.py  telegram_utils.py  utils.py
handlers/: start.py
handlers/admin/: admin_general_stats.py  admin_menu.py  delete_redis_keys.py  requests.py  restart_bot.py  users.py
handlers/profile/: profile_menu.py  profile_stats.py
handlers/reading/: reading_main.py  reading_menu.py
handlers/ui/: ui_admin.py  ui_cards.py  ui_main.py  ui_profile.py
handlers/users/: cards.py
handlers/webapp/: webapp_handler.py
src/: app.py  main.py
src/config/: constants.py  settings.py
(+188 files in other folders)
