[project]
name = "TelegramRaedingBot"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.3.0",
    "SQLAlchemy>=2.0.28",
    "pydantic>=2.6.1",
    "python-dotenv>=1.0.1",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    "aiohttp>=3.9.3",
    "openai>=1.12.0",
    "async-lru>=2.0.4",
    "dirtyjson>=1.0.8",
    "motor>=3.3.2",
    "httpx>=0.26.0",
    "redis>=6.1.0",
    "pydantic_settings>=2.9.1",
    "emoji>=2.14.1"
]
[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.5",
    "flake8>=7.0.0",
]
[build-system]
requires = ["setuptools>=80.7.1", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"
