[tool.poetry]
name = "TelegramReadingBot"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["anldstr666 <vv.mokhov@gmail.com>"]
packages = [
    { include = "core" },
    { include = "api" },
    { include = "bot" },
    { include = "config" }
]

[tool.poetry.dependencies]
python = ">=3.12"
SQLAlchemy = ">=2.0.28"
alembic = ">=1.16.1"
asyncpg = ">=0.30.0"
pydantic = ">=2.6.1"
python-dotenv = ">=1.0.1"
aiohttp = ">=3.9.3"
openai = ">=1.12.0"
async-lru = ">=2.0.4"
dirtyjson = ">=1.0.8"
motor = ">=3.3.2"
httpx = ">=0.26.0"
redis = ">=6.1.0"
pydantic_settings = ">=2.9.1"
emoji = ">=2.14.1"
fastapi = ">=0.110.0"
uvicorn = ">=0.27.1"
psutil = ">=7.0.0"
minio = ">=7.2.15"
pillow = ">=11.2.1"
aioredis = ">=2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.3"
pytest-asyncio = ">=0.23.5"
flake8 = ">=7.0.0"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"